styles/touhou.css
/* ... */
.wrapper:hover .image
{
    z-index: 999;

    -webkit-transform: scale(1.2);
            transform: scale(1.2);

    opacity: 1;
}
.wrapper
{
    font-size: 20px;

    display: inline-block;

    cursor: pointer;
    -webkit-transform: translateZ(0);

    -webkit-font-smoothing: antialiased;
}

.wrapper .tooltip
{
    position: absolute;
    z-index: 9999;
    left: 50%;

    display: block;
    overflow: hidden;

    margin-bottom: 15px;
    padding: 5px;

    -webkit-transition: all .25s ease-out;
            transition: all .25s ease-out;
    -webkit-transform: translate(-50%,-180px);
            transform: translate(-50%,-180px);
    vertical-align: middle;
    white-space: nowrap;

    opacity: 0;
    color: black;
    border-radius: 10px;
    background: white;
    box-shadow: 0 0 1px rgba(0,0,0,.3);
}

.wrapper:hover  .tooltip
{
    -webkit-transform: translate(-50%,-180px);
            transform: translate(-50%,-180px);

    opacity: 1;
}

.lte8 .wrapper .tooltip
{
    display: none;
}

.lte8 .wrapper:hover .tooltip
{
    display: block;
}

